--- a/Study notes/学习资源.md
+++ b/Study notes/学习资源.md
@@ -4,9 +4,9 @@
 
 |序号|名称|网址|说明|
 |:---:|:---:|:---:|:---:|
-|1|Spring|[https://projects.spring.io/spring-framework/](https://projects.spring.io/spring-framework/)|Spring框架|
-|2|Spring Boot|[https://projects.spring.io/spring-boot/](https://projects.spring.io/spring-boot/)|快速构建应用的框架|
-|3|JSF框架|[https://github.com/tiglabs/jsf-sdk](https://github.com/tiglabs/jsf-sdk)|京东开源的基于dubbo的分布式服务调用框架|
+|1|Spring|<https://projects.spring.io/spring-framework/>|Spring框架|
+|2|Spring Boot|<https://projects.spring.io/spring-boot/>|快速构建应用的框架|
+|3|JSF框架|<https://github.com/tiglabs/jsf-sdk>|京东开源的基于dubbo的分布式服务调用框架|
 |4||||
 |5||||
 |6||||
